package re naming

--- a/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout-land/radio_fragment.xml
+++ b/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout-land/radio_fragment.xml
@@ -24,7 +24,7 @@
             android:layout_toRightOf="@+id/short_name"
             android:layout_toEndOf="@+id/short_name" />
 
-        <middletownmusic.org.midwestradio.utils.RadioTextView
+        <middletownmusic.org.westcoastradio.utils.RadioTextView
             android:id="@+id/short_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <middletownmusic.org.midwestradio.utils.RadioTextView
+        <middletownmusic.org.westcoastradio.utils.RadioTextView
             android:id="@+id/frequency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-        <middletownmusic.org.midwestradio.utils.RadioTextView
+        <middletownmusic.org.westcoastradio.utils.RadioTextView
             android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
-    <middletownmusic.org.midwestradio.utils.RadioTextView
+    <middletownmusic.org.westcoastradio.utils.RadioTextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true" />
 
-    <middletownmusic.org.midwestradio.utils.RadioTextView
+    <middletownmusic.org.westcoastradio.utils.RadioTextView
         android:id="@+id/genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
         android:textSize="20sp"
         tools:text="Genre: Reggaeton" />
 
-    <middletownmusic.org.midwestradio.utils.RadioTextView
+    <middletownmusic.org.westcoastradio.utils.RadioTextView
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
         android:orientation="horizontal"
         android:id="@+id/linearLayout3">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/previous_scan"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
             android:textSize="20sp"
             android:text="@string/scan_left" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/previous"
             android:textColor="@color/black"
             android:layout_width="fill_parent"
@@ -126,7 +126,7 @@
             android:textSize="20sp"
             android:text="@string/less_than" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/playButton"
             android:textColor="@color/black"
             android:layout_width="fill_parent"
@@ -135,7 +135,7 @@
             android:background="@drawable/button_border"
             android:text="@string/play" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/stopButton"
             android:textColor="@color/black"
             android:layout_width="fill_parent"
@@ -144,7 +144,7 @@
             android:background="@drawable/button_border"
             android:text="@string/stop" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/next"
             android:textColor="@color/black"
             android:layout_width="fill_parent"
@@ -154,7 +154,7 @@
             android:background="@drawable/button_border"
             android:text="@string/greater" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/next_scan"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -173,7 +173,7 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button1"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -182,7 +182,7 @@
             android:layout_weight="1"
             android:text="@string/_1" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button2"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -191,7 +191,7 @@
             android:layout_weight="1"
             android:text="@string/_2" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button3"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -200,7 +200,7 @@
             android:layout_weight="1"
             android:text="@string/_3" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button4"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -209,7 +209,7 @@
             android:background="@drawable/button_border"
             android:text="@string/_4" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button5"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -218,7 +218,7 @@
             android:layout_weight="1"
             android:text="@string/_5" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button6"
             android:textColor="@color/black"
             android:layout_width="0px"
