--- a/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/activity_main.xml
+++ b/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="0dp"
-        tools:context="middletownmusic.org.midwestradio.MainActivity">
+        tools:context="middletownmusic.org.westcoastradio.MainActivity">
 
         <RelativeLayout
             android:id="@+id/header"
