--- a/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/loading_fragment.xml
+++ b/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/loading_fragment.xml
@@ -75,7 +75,7 @@
                 app:srcCompat="@drawable/right_triangles" />
         </LinearLayout>
 
-        <middletownmusic.org.midwestradio.utils.RadioTextView
+        <middletownmusic.org.westcoastradio.utils.RadioTextView
             android:id="@+id/loading_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
