--- a/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/radio_fragment.xml
+++ b/west_coast_radio_android/West Coast Radio Player/app/src/main/res/layout/radio_fragment.xml
@@ -24,7 +24,7 @@
             android:layout_toEndOf="@+id/short_name"
             android:layout_marginTop="6dp" />
 
-        <middletownmusic.org.midwestradio.utils.RadioTextView
+        <middletownmusic.org.westcoastradio.utils.RadioTextView
             android:id="@+id/short_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
 
     </RelativeLayout>
 
-    <middletownmusic.org.midwestradio.utils.RadioTextView
+    <middletownmusic.org.westcoastradio.utils.RadioTextView
         android:id="@+id/frequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <middletownmusic.org.midwestradio.utils.RadioTextView
+            <middletownmusic.org.westcoastradio.utils.RadioTextView
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                 android:textSize="20sp"
                 tools:text="Some Super long text description Some Super description" />
 
-            <middletownmusic.org.midwestradio.utils.RadioTextView
+            <middletownmusic.org.westcoastradio.utils.RadioTextView
                 android:id="@+id/genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                 android:textSize="20sp"
                 tools:text="Genre: Reggaeton" />
 
-            <middletownmusic.org.midwestradio.utils.RadioTextView
+            <middletownmusic.org.westcoastradio.utils.RadioTextView
                 android:id="@+id/type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
         android:layout_above="@+id/linearLayout3"
         android:orientation="horizontal">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/playButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -124,7 +124,7 @@
             android:textColor="@color/black"
             android:text="@string/play" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/stopButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
         android:orientation="horizontal"
         android:id="@+id/linearLayout3">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/previous_scan"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
             android:textSize="20sp"
             android:text="@string/scan_left" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/previous"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -164,7 +164,7 @@
             android:textSize="20sp"
             android:text="@string/less_than" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/next"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
             android:textSize="20sp"
             android:text="@string/greater" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/next_scan"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -194,7 +194,7 @@
         android:orientation="horizontal"
         android:id="@+id/linearLayout2">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button1"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -203,7 +203,7 @@
             android:layout_weight="1"
             android:text="@string/_1" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button2"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -212,7 +212,7 @@
             android:layout_weight="1"
             android:text="@string/_2" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button3"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -231,7 +231,7 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout">
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button4"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -240,7 +240,7 @@
             android:background="@drawable/button_border"
             android:text="@string/_4" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button5"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -249,7 +249,7 @@
             android:layout_weight="1"
             android:text="@string/_5" />
 
-        <middletownmusic.org.midwestradio.utils.RadioButton
+        <middletownmusic.org.westcoastradio.utils.RadioButton
             android:id="@+id/button6"
             android:textColor="@color/black"
             android:layout_width="0px"
@@ -259,12 +259,12 @@
             android:text="@string/_6" />
     </LinearLayout>
 
-    <middletownmusic.org.midwestradio.utils.RadioTextView
+    <middletownmusic.org.westcoastradio.utils.RadioTextView
         android:id="@+id/location"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone">
-    </middletownmusic.org.midwestradio.utils.RadioTextView>
+    </middletownmusic.org.westcoastradio.utils.RadioTextView>
 
 
 </RelativeLayout>
